# template-haskell

./: .hlint.yaml  LICENSE  NAME.cabal  PKGNAME.cabal  README.md  README_TEMPLATE.md  cabal.project  default.nix  flake.nix  hie.yaml  pkgs.nix  shell.nix  wizard.sh
.github/workflows/: CI.yaml
src/: Lib.hs
test/: Spec.hs
