cabal-version:   2.4
name:            NAME
version:         0
license:         BSD-3-Clause
build-type:      Simple
extra-doc-files:
  README.md
  CHANGELOG.md

-- license-file:    LICENSE
-- author:          Bob Saget
-- maintainer:      Bob Saget <bob.saget@hotmail.com>
-- copyright:       2020 Bob Saget
-- category:        CATEGORIES
-- tested-with:     GHC ==8.8.3

common common-options
  build-depends:    base ^>=4.13.0.0
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib
  build-depends:
    , containers
    , mtl

executable NAME
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  NAME
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite NAME-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , NAME
    , tasty
    , tasty-hunit
    , tasty-quickcheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark NAME-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , NAME

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
